# c-project-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  flake.nix
.github/workflows/: format.yml  main.yml  nix.yml
misc/integration/tasks/: format.sh
misc/nix/: package.nix
src/: main.c  program.c
